@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180204"
-#define public MagickPackageReleaseDate "snapshot-20180204"
+#define public MagickPackageVersionAddendum ".020180206"
+#define public MagickPackageReleaseDate "snapshot-20180206"
